# scoreboard-tracker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  sounds.svelte.ts
frontend/src/lib/components/: AchievementBadge.svelte  FlameStreak.svelte  Leaderboard.svelte  MatchCard.svelte  MatchEditModal.svelte  PlayerAvatar.svelte  StatsChart.svelte  TrashTalk.svelte
frontend/src/lib/stores/: auth.svelte.ts  league.svelte.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/hall-of-shame/: +page.svelte
frontend/src/routes/leagues/: +page.svelte
frontend/src/routes/matches/: +page.svelte
frontend/src/routes/matches/new/: +page.svelte
frontend/src/routes/players/: +page.svelte
frontend/src/routes/players/[id]/: +page.svelte
src/: config.rs  main.rs
src/auth/: middleware.rs  mod.rs  oidc.rs
src/models/: league.rs  match_record.rs  mod.rs  player.rs  user.rs
src/routes/: auth.rs  leaderboard.rs  leagues.rs  matches.rs  mod.rs  players.rs  users.rs
src/storage/: client.rs  leagues.rs  matches.rs  mod.rs  players.rs  users.rs
