[package]
name = "scoreboard"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Azure Table Storage
azure_data_tables = "0.21"
azure_core = "0.21"
azure_storage = "0.21"

# Auth - OIDC and JWT
openidconnect = "4"
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
base64 = "0.22"
